
import "GameConstants.proto";
import "GameBasic.proto";
import "BBS.proto";

package game;

option java_package = "com.orange.network.game.protocol.model";
option java_outer_classname = "TutorialProtos";

enum PBTutorialLevel{
    TUTORIAL_LEVEL_ENTRY = 0;
    TUTORIAL_LEVEL_EASY = 1;
    TUTORIAL_LEVEL_NORMAL = 2;
    TUTORIAL_LEVEL_HARD = 3;
}

enum PBTutorialCategory{
    TUTORIAL_CATEGORY_NEW = 0;
    TUTORIAL_CATEGORY_MEDIUM = 1;
    TUTORIAL_CATEGORY_ADVANCE = 2;
}

enum PBTutorialImageStyle{
    TUTORIAL_IMAGE_COLOR = 0;
    TUTORIAL_IMAGE_BLACK_WHITE = 1;
}

enum PBScoreEngineType{
    SCORE_ENGINE_AUTO = 0;
    SCORE_ENGINE_AVG_HASH = 1;
    SCORE_ENGINE_AVG_HASH_COLOR_HIST = 2;
    SCORE_ENGINE_AVG_HASH_COLOR_HIST_HU = 3;
}

message PBTip
{
    required int32  index = 1;

    optional string cnName = 2;                     // 简体中文名称
    optional string enName = 3;                     // 英文名称
    optional string tcnName = 4;                    // 繁体中文名称

    optional string cnDesc = 10;
    optional string enDesc = 11;
    optional string tcnDesc = 12;
    
    optional string image = 21;                      // 提示图片URL（远程的）

    optional string imageName = 31;                  // 提示图片文件名（在zip包中的）
}

message PBChapter
{
    required int32  index = 1;                      // 索引，唯一

    optional string cnName = 2;                     // 简体中文名称
    optional string enName = 3;                     // 英文名称
    optional string tcnName = 4;                    // 繁体中文名称

    optional string cnDesc = 10;
    optional string enDesc = 11;
    optional string tcnDesc = 12;

    optional string opusId = 20;                     // 回放作品ID（可以直接从ID获得URL、Image等信息），废弃
    optional string opusData = 21;                   // 回放作品包URL，废弃
    optional string image = 22;                      // 作品图片URL，废弃
    optional string background = 23;                 // 绘画底图URL，废弃

    optional string opusName = 30;                   // 回放作品包文件名，废弃
    optional string imageName = 31;                  // 本小节图片文件名
    optional string backgroundName = 32;             // 绘画底图文件名，废弃
    
    repeated PBTip  tips = 33;                       // 每个小节的提示

    optional int32  startIndex = 50;                 // 作品播放起始点，为0表示开始
    optional int32  endIndex = 51;                   // 作品播放结束点，为-1表示到最后
}

// 关卡
// 一个关卡zip包里面包含信息如下
// 1) tutorial.pb 文件，包括完整的教程、关卡和章节信息
// 2) 关卡作品图片、关卡底图、关卡回放作品
message PBStage
{
    required string stageId = 1;

    optional string cnName = 2;                     // 简体中文名称
    optional string enName = 3;                     // 英文名称
    optional string tcnName = 4;                    // 繁体中文名称

    optional string cnDesc = 10;
    optional string enDesc = 11;
    optional string tcnDesc = 12;

    optional string opusId = 19;                    // 本关卡作品的ID
    optional string image = 20;                     // 本关卡的作品图片URL
    optional string thumbImage = 21;                // 本关卡的作品小图片URL
    optional string opusData = 22;                  // 本关卡的作品图片URL
    optional string bgImage = 23;                   // 本关卡的作品图片URL

    optional string dataURL = 30;                   // 下载的zip包URL，格式为 <tutorialId>__<stageId>.zip
    optional string imageName = 31;                 // 本关卡的作品图片名称，用于最后闯关比对
    optional string opusName = 32;                  // 本关卡的作品数据名称
    optional string bgImageName = 33;               // 本关卡的作品图片名称，作品回放时候将画在该底图上

    repeated PBChapter chapter = 40;                // 教程章节

    optional int32  imageStyle = 50;                // 闯关图片类型，取值参考PBTutorialImageStyle
    optional int32  scoreEngine = 51;               // 评分引擎，取值参考PBScoreEngineType
    optional float difficulty = 52[default=1.0];    // 本关作品难度系数，默认为1.0（for简笔画，其他可能要取0.8-0.9）

    optional bool useBgFromPrev = 60[default=false];// 本关作品是否使用上一关的背景图
}

// 教程
// 一个教程zip包里面包含信息如下
// 1) tutorial.pb 文件，包括完整的教程、关卡和章节信息
// 2) 关卡作品图片、关卡底图、关卡回放作品
message PBTutorial
{
    required string tutorialId = 1;
    
    optional string cnName = 2;                     // 简体中文名称
    optional string enName = 3;                     // 英文名称
    optional string tcnName = 4;                    // 繁体中文名称

    optional string cnDesc = 10;
    optional string enDesc = 11;
    optional string tcnDesc = 12;

    optional int32  level = 20;                     // 参考PBTutorialLevel
    repeated int32  categories = 21;                // 分类列表，暂时不用
    optional bool   isFeature = 22;                 // 是否推荐
    optional string image = 23;                     // 大图片
    optional string thumbImage = 24;                // 小图片
    optional string dataUrl = 25;                   // 教程包的下载文件名
    repeated PBStage stages = 26;                   // 教程的关卡的基础信息

    optional bool   isFree = 30[default=true];
    optional int32  price = 31;
    optional int32  priceUnit = 32;
    
    optional int32  createDate = 40;
    optional int32  modifyDate = 41;
    
    optional bool   isNew = 50;                     // 是否最近推出
    
    optional int32  version = 100;                  // 教程文件版本
}

message PBTutorialCore
{
    repeated PBTutorial tutorials = 1;
    optional int32 version = 2;

    repeated string stepByStepTutorialId = 10;          // 默认开始学习的教程ID线索
}

// 用户闯关的作品
message PBUserStageOpus
{
    required string localOpusId = 1;
    optional string remoteOpusId = 2;

    optional int32  score = 4;
    optional int32  createDate = 5;
    optional string localUrl = 6;
    optional string remoteUrl = 7;
    
}

// 用户和关卡的关系
message PBUserStage
{
    required string userId = 1;
    required string tutorialId = 2;
    required string stageId = 3;
    optional int32  stageIndex = 4;

    repeated PBUserStageOpus opus = 8;              // 闯关记录信息
    optional int32  currentChapterIndex = 10;       // 当前修炼的章节索引，从0开始

    optional string practiceLocalOpusId = 20;       // 当前修炼的作品ID
    optional string conquerLocalOpusId = 30;        // 当前闯关的作品ID
    optional string conquerLocalImage = 31;         // 当前最近一次闯关成功的作品图片本地路径
    
    optional string bestOpusId = 50;                // 最好闯关的作品ID
    optional int32  bestScore = 51;                 // 最好成绩
    optional int32  bestScoreDate = 52;             // 最好成绩时间

    optional string lastOpusId = 60;                // 最后一次闯关作品ID
    optional int32  lastScore = 61;                 // 最后一次闯关成绩
    optional int32  lastScoreDate = 62;             // 最后一次闯关时间
    optional int32  totalCount = 63;                // 最后一次闯关时候作品总数
    optional int32  defeatCount = 64;               // 最后一次闯关时候击败用户总数
}

enum PBUserTutorialStatus
{
    UT_STATUS_NOT_START = 0;                // 未开始学习
    UT_STATUS_START = 1;                    // 开始学习中
    UT_STATUS_COMPLETE = 2;                 // 已经完成学习
}

// 用户和教程的关系，用于保存到本地
message PBUserTutorial
{
    required string userId = 1;
    required PBTutorial tutorial = 2;

    optional int32 status = 3;                  // 是否正在学习，取值参考PBUserTutorialStatus
    optional bool isDownload = 4;               // 是否已经下载
    optional bool isPurchase = 5;               // 是否已经购买，仅适用于付费教程

    optional int32  createDate = 10;
    optional int32  lastPlayDate = 11;
    optional int32  modifyDate = 12;            // 下载、购买、开始闯关、修炼都可以修改该时间

    optional int32  currentStageIndex = 20;     // 当前玩到第几关
    optional string currentStageId = 21;        // 当前关的ID
    repeated PBUserStage userStages = 22;       // 每一关的具体信息
    
    optional bool   syncServer = 30;            // 本数据是否已经同步到服务器
    optional string localId = 31;               // 保存到本地的ID
    optional string remoteId = 32;              // 服务器返回的ID
}


